--- a/UnitOfWork/Views/Shared/_Layout.cshtml
+++ b/UnitOfWork/Views/Shared/_Layout.cshtml
@@ -9,17 +9,18 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year -Dog Owner's</p>
-        </footer>
-    </div>
+    <body>
+        <header><h1>Ultimate Dog Owner 2015©</h1></header>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year -Dog Owner's</p>
+            </footer>
+        </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
+    </body>
 </html>
