remane somes classes that have a default name (class1.cs for instance)

--- a/UnitOfWork/Views/Home/Index.cshtml
+++ b/UnitOfWork/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @using UnitOfWorkNamespace.Models
 @model HomeViewModel
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="row">
